doctor reg page height, dropdown responsivity and size, button text align resolved

--- a/CHL-Frontend/src/app/common/navbar/navbar.component.scss
+++ b/CHL-Frontend/src/app/common/navbar/navbar.component.scss
@@ -1,6 +1,6 @@
 .navbar {
   background-color: #fff;
-  height: 7%;
+  height: 10vh;
   font-family: Montserrat;
   font-size: 35px;
 
